IndexedDB: Plumbing to allow cause of transaction abort to be passed to script

Include a database error (code, message) in the abort callback. The WebKit side
is http://webkit.org/b/99097 which must land after this patch.

R=dgrogan@chromium.org
BUG=113118


Review URL: https://chromiumcodereview.appspot.com/11114022

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@161927 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 2fb56116202d831af2b7bd0cbe8db2e86f88e692