content/common/indexed_db/indexed_db_dispatcher.h
@@ -256,7 +256,12 @@ class CONTENT_EXPORT IndexedDBDispatcher
                        int32 transaction_id,
                        int32 database_id,
                        int64 old_version);
-  void OnAbort(int32 thread_id, int32 transaction_id);
+  // TODO(jsbell): Remove once WK99097 has landed.
+  void OnAbortLegacy(int32 thread_id, int32 transaction_id);
+  void OnAbort(int32 thread_id,
+               int32 transaction_id,
+               int code,
+               const string16& message);
   void OnComplete(int32 thread_id, int32 transaction_id);
   void OnForcedClose(int32 thread_id, int32 database_id);
   void OnVersionChange(int32 thread_id,
